Completed authentication reset verify
