# apps/auth-service/src/controller/auth.controller.ts
@@ -1,8 +1,10 @@
 import { NextFunction, Request, Response } from "express";
-import { checkOtpRestrictions, sendOtp, trackOtpRequests, validateRegistrationData, verifyOtp } from "../utils/auth.helper";
+import { checkOtpRestrictions, handleForgotPassword, sendOtp, trackOtpRequests, validateRegistrationData, verifyForgotPasswordOtp, verifyOtp } from "../utils/auth.helper";
 import bcrypt from "bcryptjs";
+import jwt from "jsonwebtoken";
 import prisma from "../../../../packages/libs/prisma";
-import { ValidationError } from "../../../../packages/error-handler";
+import { AuthError, ValidationError } from "../../../../packages/error-handler";
+import { setCookie } from "../utils/cookies/setCookie";
 
 // Register a new user
 export const userRegistration = async (req: Request, res: Response, next: NextFunction) => {
@@ -70,3 +72,96 @@ export const verifyUser = async(req:Request, res:Response, next: NextFunction) =
     }
 }
 
+
+// login user
+export const loginUser = async(req:Request, res:Response, next:NextFunction) => {
+    try {
+        const {email, password} = req.body;
+
+        if(!email || !password){
+            return next(new ValidationError("Email and password are required!"))
+        }
+
+        const user = await prisma.users.findUnique({where : {email}})
+
+        if(!user) return next(new AuthError("User doesn't exists!"))
+
+        // verify password
+        const isMatch = await bcrypt.compare(password, user.password!)
+        if(!isMatch){
+            return next(new AuthError("Invalid email or password"))
+        }
+
+        // Generate access and refresh token
+        const accessToken = jwt.sign({id: user.id, role:"user"},
+            process.env.ACCESS_TOKEN_SECRET as string,
+            {
+                expiresIn: "15m",
+            }
+        )
+
+         const refreshToken = jwt.sign({id: user.id, role:"user"},
+            process.env.REFRESH_TOKEN_SECRET as string,
+            {
+                expiresIn: "7d",
+            }
+        )
+
+        // Store the refresh and access token in an httpOnly secure cookie
+        setCookie(res, "refresh_token", refreshToken);
+        setCookie(res, "access_token", accessToken);
+
+        res.status(200).json({
+            message: "Login successful!",
+            user: { id: user.id, email: user.email, name: user.name}
+        })
+
+    } catch (error) {
+        return next(error);
+    }
+}
+
+// User forgot password
+export const userForgotPassword = async(req: Request, res: Response, next: NextFunction)=>{
+    await handleForgotPassword(req, res, next, "user")
+}
+
+// Verify forgot password OTP
+export const verifyUserForgotPassword = async(req: Request, res: Response, next: NextFunction) => {
+    await verifyForgotPasswordOtp(req, res, next)
+}
+
+// Reset user password
+export const resetUserPassword = async(req: Request, res: Response, next: NextFunction) => {
+    try {
+        const {email, newPassword} = req.body
+
+          if(!email || !newPassword){
+            return next(new ValidationError("Email and password are required!"))
+        }
+
+        const user = await prisma.users.findUnique({where : {email}})
+
+        if(!user) return next(new AuthError("User doesn't exists!"))
+
+        // compare new password with the existing one
+        const isSamePassword = await bcrypt.compare(newPassword, user.password!)
+
+        if(isSamePassword){
+            return next(new ValidationError("New password cannot be the same as the old password!"))
+        }
+
+        // hash the new password
+        const hashedPassword = await bcrypt.hash(newPassword, 10)
+
+        await prisma.users.update({
+            where: { email },
+            data: { password: hashedPassword },
+        })
+
+        res.status(200).json({message:"Password reset successfully!"})
+
+    } catch (error) {
+        next(error)
+    }
+}
