# apps/auth-service/src/routes/auth.router.ts
@@ -1,9 +1,14 @@
 import express, { Router } from "express";
-import { userRegistration, verifyUser } from "../controller/auth.controller";
+import { loginUser, resetUserPassword, userForgotPassword, userRegistration, verifyUser, verifyUserForgotPassword } from "../controller/auth.controller";
+
 
 const router:Router = express.Router();
 
 router.post("/user-registration", userRegistration);
 router.post("/verify-user", verifyUser);
+router.post("/login-user", loginUser);
+router.post("/forgot-password-user", userForgotPassword);
+router.post("/reset-password-user", resetUserPassword);
+router.post("/verify-forgot-password-user", verifyUserForgotPassword);
 
 export default router;
